# primex-crm

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.dev.override.yml  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  list_tables.py  pyproject.toml  render.yaml  requirements.txt  seed_admin.py  start.ps1  vercel.json
backend/.github/workflows/: backend.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 7689b48302e9_initial_schema.py  a3f9c1d2e4b5_add_payments_expenses_documents.py
backend/api/: index.py
backend/app/: __init__.py  main.py
backend/app/activity/: models.py  router.py
backend/app/analytics/: router.py
backend/app/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  base_model.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  redis.py  repository.py  security.py
backend/app/customers/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/dashboard/: router.py  schemas.py  service.py
backend/app/documents/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/expenses/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/orders/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/payments/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/users/: models.py
frontend/: .gitignore  next.config.ts  (+3 more)
(+17 files in other folders)
